--- a/FlightBooking/composer.json
+++ b/FlightBooking/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "auth0/auth0-php": "^8.11",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
