--- a/FlightBooking/composer.json
+++ b/FlightBooking/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.2",
         "auth0/auth0-php": "^8.11",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/socialite": "^5.15",
+        "laravel/tinker": "^2.9",
+        "stripe/stripe-php": "^15.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
