--- a/HotelBooking/package.json
+++ b/HotelBooking/package.json
@@ -20,6 +20,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@inertiajs/inertia-react": "^0.8.1"
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/progress": "^0.2.7"
     }
 }
