--- a/HotelBooking/composer.json
+++ b/HotelBooking/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "3.1.58",
         "stripe/stripe-php": "^15.9",
-        "tightenco/ziggy": "^2.0"
+        "tightenco/ziggy": "^2.0",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^14.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
