--- a/Meetup/package.json
+++ b/Meetup/package.json
@@ -20,6 +20,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1"
+        "@inertiajs/inertia": "^0.11.1",
+        "react-hook-form": "^7.53.0",
+        "react-router-dom": "^6.26.2"
     }
 }
