--- a/Meetup/package.json
+++ b/Meetup/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
+        "date-fns": "^4.1.0",
         "react-hook-form": "^7.53.0",
         "react-router-dom": "^6.26.2"
     }
