--- a/Meetup/package.json
+++ b/Meetup/package.json
@@ -21,8 +21,10 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
+        "@reduxjs/toolkit": "^2.3.0",
         "date-fns": "^4.1.0",
         "react-hook-form": "^7.53.0",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.2"
     }
 }
