--- a/Meetup/package.json
+++ b/Meetup/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
+        "@react-pdf/renderer": "^4.0.0",
         "@reduxjs/toolkit": "^2.3.0",
         "date-fns": "^4.1.0",
         "react-hook-form": "^7.53.0",
